tests/ui/pin-ergonomics/pattern-matching-mix-deref-pattern.both.stderr
error: cannot project on type that is not `#[pin_v2]`
  --> $DIR/pattern-matching-mix-deref-pattern.rs:108:9
   |
LL |     let NonPinProject { x } = foo;
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: type defined here
  --> $DIR/pattern-matching-mix-deref-pattern.rs:27:1
   |
LL | struct NonPinProject<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: add `#[pin_v2]` here
   |
LL + #[pin_v2]
LL | struct NonPinProject<T> {
   |

error: cannot project on type that is not `#[pin_v2]`
  --> $DIR/pattern-matching-mix-deref-pattern.rs:113:9
   |
LL |     let NonPinProject { x } = bar;
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: type defined here
  --> $DIR/pattern-matching-mix-deref-pattern.rs:27:1
   |
LL | struct NonPinProject<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: add `#[pin_v2]` here
   |
LL + #[pin_v2]
LL | struct NonPinProject<T> {
   |

error: cannot project on type that is not `#[pin_v2]`
  --> $DIR/pattern-matching-mix-deref-pattern.rs:121:9
   |
LL |         NonPinProject { x } => {}
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: type defined here
  --> $DIR/pattern-matching-mix-deref-pattern.rs:27:1
   |
LL | struct NonPinProject<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: add `#[pin_v2]` here
   |
LL + #[pin_v2]
LL | struct NonPinProject<T> {
   |

error: cannot project on type that is not `#[pin_v2]`
  --> $DIR/pattern-matching-mix-deref-pattern.rs:129:9
   |
LL |         NonPinProject { x } => {}
   |         ^^^^^^^^^^^^^^^^^^^
   |
note: type defined here
  --> $DIR/pattern-matching-mix-deref-pattern.rs:27:1
   |
LL | struct NonPinProject<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: add `#[pin_v2]` here
   |
LL + #[pin_v2]
LL | struct NonPinProject<T> {
   |

error: aborting due to 4 previous errors

